Intento mejora visual sitio

--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -177,7 +177,7 @@
         </button>
 
         <button
-          *ngIf="userProfile?.esVendedor"
+          *ngIf="userProfile.esVendedor"
           class="flex-1 min-w-fit py-5 px-8 text-center font-semibold transition-all duration-300 relative group"
           [class]="
             activeTab === 'productos'
